parameters and another container

--- a/ansible/playbooks/templates/ansible-pull.timer.j2
+++ b/ansible/playbooks/templates/ansible-pull.timer.j2
@@ -5,7 +5,7 @@ Description=Ansible Pull Timer
 
 [Timer]
 Unit=ansible-pull.service
-OnCalendar=*:0/30:00
+OnCalendar={{ ansible_pull_timer_schedule }}
 Persistent=true
 
 [Install]
