--- a/ansible/playbooks/templates/ansible-pull.service.j2
+++ b/ansible/playbooks/templates/ansible-pull.service.j2
@@ -6,10 +6,10 @@ After=network-online.target
 
 [Service]
 ExecStart=/usr/bin/ansible-pull \
-	--url https://github.com/dschier-wtd/fedora-iot.git \
+	--url {{ ansible_pull_service_url }} \
 	--inventory inventory/hosts.yml \
 	--only-if-changed \
 	--checkout main \
-	--sleep 30 \
+	--sleep {{ ansible_pull_service_sleep }} \
 	ansible/playbooks/install_requirements.yml \
 	ansible/playbooks/configure_server.yml
